--- a/template/CustVRF.j2
+++ b/template/CustVRF.j2
@@ -1,5 +1,43 @@
+{# Marco to create a unique_id for setup #}
+
+{%- macro random_int(len) -%}
+  {%- for n in range(len) -%}
+    {{ range(10)|random }}
+  {%- endfor -%}
+{%- endmacro -%}
+
+{%- macro unique_id(count_groups=5, group_len=4) -%}
+  {%- set parts -%}
+    {%- for n in range(count_groups) -%}
+      {{ random_int(group_len) }}
+    {%- endfor -%}
+  {%- endset -%}
+  {{ parts|join('') }}
+{%- endmacro -%}
+
+{# Template for setup #}
+
 {% for item in CustSetup %}
-set routing-instances {{ item.CustName -}} - {{- item.CustCRM -}} -Untrusted instance-type virtual-router interface reth0. {{- item.CustVLAN }}
-set security zones security-zone {{ item.CustName -}} -Trusted host-inbound-services
-set security zones security-zone {{ item.CustName -}} -Trusted interface reth1. {{- item.CustVLAN }}
+routing-instances {
+  {{ item.CustName -}} - {{- item.CustCRM -}} - {{- unique_id() }} {
+    instance-type virtual-router;
+    interface reth0. {{- item.CustUntrustVlan -}} ;
+    interface reth0. {{- item.CustTrustVlan -}} ;
+  }
+}
+security {
+  zones {
+    security-zone {{ item.CustName -}} -Untrust- {{- unique_id() }} {
+      apply-group zone-defaults;
+      interface reth0. {{- item.CustUntrustVlan -}} ;
+    }
+    security-zone {{ item.CustName -}} -Trust- {{- unique_id() }} {
+      apply-group zone-defaults;
+      interface reth0. {{- item.CustTrustVlan -}} ;
+    }
+    security-zone {{ item.CustName -}} -VPN- {{- unique_id() }} {
+      apply-group zone-defaults;
+    }
+  }
+}
 {% endfor -%}
